# opencv

./: .gitignore  .gitmodules  Fugro.OpenCV.sln  README.md  build.ps1  build_and_compile.ps1  clean.ps1
Fugro/OpenCV/: AssemblyInfo.cpp  Contour.cpp  DoubleArray.cpp  DoubleArray.h  EllipseInfo.h  Enumerations.h  Fugro.OpenCV.nuspec  Fugro.OpenCV.vcxproj  Fugro.OpenCV.vcxproj.filters  GrabCut.cpp  GrabCut.h  ImageArray.cpp  ImageArray.h  Kernel.cpp  Kernel.h  MatArray.cpp  MatArray.h  MatArrayBase.cpp  MatArrayBase.h  OpticalFlowResult.h
Fugro/Test/: ContourTests.cs  DoubleArrayTests.cs  Fugro.OpenCV.Test.csproj  ImageArrayTests.cs  KernelTests.cs  packages.config
source/: CMakeLists.txt  Fugro.OpenCV.nuspec.in
source/fugrotest/: CMakeLists.txt  ContourTests.cs  DoubleArrayTests.cs  ImageArrayTests.cs  KernelTests.cs
source/fugrotest/Properties/: AssemblyInfo.cs
source/src/: AssemblyInfo.cpp  Contour.h  DoubleArray.h  Enumerations.h  ImageArray.cpp  ImageArray.h  Kernel.h  MatArray.cpp  MatArrayBase.cpp  MatArrayBase.h  OpticalFlowResult.h  Primitives.h
tools/: readme.txt
tools/share/cmake-3.15/Help/: index.rst
tools/share/cmake-3.15/Help/command/: FIND_XXX.txt  add_custom_command.rst  add_custom_target.rst  add_test.rst  enable_language.rst  execute_process.rst  file.rst  find_package.rst  if.rst  install.rst  list.rst  math.rst  message.rst  project.rst  string.rst
tools/share/cmake-3.15/Help/cpack_gen/: deb.rst
tools/share/cmake-3.15/Help/generator/: Ninja.rst  Unix Makefiles.rst
tools/share/cmake-3.15/Help/manual/: OPTIONS_BUILD.txt  cmake-buildsystem.7.rst  cmake-commands.7.rst  cmake-generator-expressions.7.rst  cmake-modules.7.rst  cmake-packages.7.rst  cmake-policies.7.rst  cmake-properties.7.rst  cmake-toolchains.7.rst  cmake-variables.7.rst  cmake.1.rst  cpack.1.rst  ctest.1.rst
tools/share/cmake-3.15/Help/policy/: CMP0091.rst
tools/share/cmake-3.15/Help/prop_dir/: ADDITIONAL_MAKE_CLEAN_FILES.rst  EXCLUDE_FROM_ALL.rst
tools/share/cmake-3.15/Help/prop_test/: SKIP_RETURN_CODE.rst
tools/share/cmake-3.15/Help/prop_tgt/: BUILD_RPATH.rst  CUDA_RESOLVE_DEVICE_SYMBOLS.rst  EXCLUDE_FROM_ALL.rst  IMPORTED_IMPLIB.rst  INSTALL_RPATH.rst  MSVC_RUNTIME_LIBRARY.rst  XCODE_GENERATE_SCHEME.rst
tools/share/cmake-3.15/Help/variable/: CMAKE_CUDA_HOST_COMPILER.rst  CMAKE_EXECUTE_PROCESS_COMMAND_ECHO.rst  CMAKE_GENERATOR_TOOLSET.rst  CMAKE_MSVC_RUNTIME_LIBRARY.rst
tools/share/cmake-3.15/Modules/: BundleUtilities.cmake  CMakeCXXCompiler.cmake.in  CMakeDependentOption.cmake  CMakeDetermineASMCompiler.cmake  CMakeDetermineCCompiler.cmake  CMakeDetermineCSharpCompiler.cmake  CMakeDetermineCXXCompiler.cmake  CMakeDetermineCompilerId.cmake  CMakeDetermineSwiftCompiler.cmake  CMakeFindBinUtils.cmake  CMakeGenericSystem.cmake  CMakeParseImplicitIncludeInfo.cmake  CMakePlatformId.h.in  CMakePrintHelpers.cmake  CMakeRCInformation.cmake  CMakeSwiftInformation.cmake  CPack.cmake  CheckCXXSymbolExists.cmake  CheckSymbolExists.cmake  ExternalProject.cmake  FindBISON.cmake  FindBZip2.cmake  FindBacktrace.cmake  FindBoost.cmake  FindCUDA.cmake  FindCurses.cmake  FindDoxygen.cmake  FindGLEW.cmake  FindGTK2.cmake  FindGTest.cmake  FindGnuTLS.cmake  FindHDF5.cmake  FindJNI.cmake  FindJava.cmake  FindLAPACK.cmake  FindLibLZMA.cmake  FindMPI.cmake  FindMatlab.cmake  FindOpenMP.cmake  FindOpenSSL.cmake  (+14 more)
tools/share/cmake-3.15/Modules/Compiler/: Clang-CXX.cmake  Clang.cmake  CrayPrgEnv.cmake  GNU.cmake  IAR-ASM.cmake  IAR-C.cmake  IAR-CXX.cmake  IAR-DetermineCompiler.cmake  IAR-FindBinUtils.cmake  Intel-Fortran.cmake  NVIDIA-CUDA.cmake  XL.cmake
tools/share/cmake-3.15/Modules/FindPython/: Support.cmake
tools/share/cmake-3.15/Modules/Internal/CPack/: CPackDeb.cmake  CPackNuGet.cmake
tools/share/cmake-3.15/Modules/Platform/: AIX-XL.cmake  Darwin.cmake  Windows-Clang.cmake  Windows-MSVC.cmake
tools/share/cmake-3.15/Modules/Platform/Android/: abi-common.cmake
tools/share/cmake-3.15/completions/: cmake
tools/share/cmake-3.15/editors/vim/syntax/: cmake.vim
